[package]
name = "http-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
reqwest = { version = "0.12", features = ["blocking", "cookies", "json"] }
serde = "1.0.198"
serde_derive = "1.0.198"
serde_json = "1.0.116"
